@startuml
'https://plantuml.com/class-diagram

interface RecordDao{
    + getAll():List<HistoryRecord>
    +{abstract} addRecord():void
    +{abstract} deleteByRank(int rank):void
    +{abstract} sortByScore():void
    +{abstract} writeToFile():void
    +{abstract} makeRecord(int score):HistoryRecord
}

class RecordDaompl{
    -{static}RecordDaompl recordDaompl
    - RecordList:List<HistoryRecord>
    - path:Path
    - file:File
    - RecordDaompl()
    + getInstance():RecordDaompl
    + getAll():List<HistoryRecord>
    + addRecord():void
    + deleteByRow(int row):void
    + sortByScore():void
    + writeToFile():void
    + makeRecord(int score, String id):HistoryRecord

}

RecordDao <|.. RecordDaompl
RecordDaompl --> HistoryRecord
class HistoryRecord{
    - rank:int
    - playerid:String
    - score:int
    - time:String
    + setrank():void
    + getrank():int
    + setplayerid():void
    + getplayerid():String
    + setscore():void
    + getscore():int
    + settime():void
    + gettime():String
}

@enduml